[workspace]
members = [
    "src/bqbtc",
    "src/governance",
    "src/cover",
    "src/pool",
    "src/shared",
    "src/bqtoken"
]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
ic-kit = "0.4.3"
ic-cdk-timers = "0.10"
serde = "1.0.126"
serde_derive = "1.0.126"
cap-std = { git = "https://github.com/Psychedelic/cap", branch = "main", package="cap-standards", features = ["alpha-dip20", "cap-sdk", "sdk-impls"] }
cap-sdk = { git = "https://github.com/Psychedelic/cap.git", branch = "main" }