[package]
name = "shared"                 
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
ic-kit = "0.4.3"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
serde = "1.0.126"
serde_derive = "1.0.126"
cap-std = { git = "https://github.com/Psychedelic/cap", branch = "main", package="cap-standards", features = ["alpha-dip20", "cap-sdk", "sdk-impls"] }
cap-sdk = { git = "https://github.com/Psychedelic/cap.git", branch = "main" }
